# gh-cmt

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.yml
.github/workflows/: release.yml
src/: config.rs  git.rs  llm.rs  main.rs  prompt.yml
