[package]
name = "gh-cmt"
version = "0.1.0"
edition = "2024"
description = "AI-powered commit message generator using GitHub Models API"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
